<resources>
    <string name="app_name">GitProject</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="mian_home">首页</string>
    <string name="mian_invest">投资</string>
    <string name="mian_money">我的资产</string>
    <string name="mian_more">更多</string>
    <string name="wel_alert_title">下载最新版本</string>
    <string name="wel_alert_yes">确定</string>
    <string name="wel_alert_no">取消</string>


    <string name="home_one_btn">本息保障</string>
    <string name="home_two_btn">每日计息</string>
    <string name="home_three_btn">高额收益</string>
    <string name="home_year">预期年利率:</string>
    <string name="home_join">立即加入</string>
    <string name="home_company">风险保障金由有道银行监管</string>
    <string name="home_banner_one">分享砍学费</string>
    <string name="home_banner_two">人脉总动员</string>
    <string name="home_banner_three">想不到你是这样的app</string>
    <string name="home_banner_four">购物节，爱不单行</string>


    <string name="finances_item_money">产品金额</string>
    <string name="finances_item_lock">锁定期</string>
    <string name="finances_item_unit">万</string>
    <string name="finances_lamp">有道金融豪运当头，首投返现最高1888元</string>
    <string name="finances_del">删除</string>


    <string name="invest_one">全部理财</string>
    <string name="invest_two">推荐理财</string>
    <string name="invest_three">热门理财</string>

    <string name="mine_invest">投资管理</string>
    <string name="mine_reward">投资管理（直观）</string>
    <string name="mine_asset">资产管理</string>
    <string name="mine_login">请先登录</string>
    <string name="mine_notify">学习提示：</string>
    <string name="mine_content">充值我们将以集成支付宝sdk支付金额演示充值功能</string>
    <string name="mine_business">提现业务:在p2p金融平台中,提现都不是实时到账的,而是审核提现,系统将会告知24小时内进行转账,如果未收到,请联系客服.
        </string>

    <string name="more_register">用户注册</string>
    <string name="more_secret">手势密码</string>
    <string name="more_reset">重置手势密码</string>
    <string name="more_contact">联系客服</string>
    <string name="more_contact_photo">010-56253825</string>
    <string name="more_sms">用户反馈</string>
    <string name="more_share">分享给好友</string>
    <string name="more_about">关于有道理财</string>


    <string name="pwd_title">手势密码</string>



</resources>