<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_gray"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".more.MoreFragment">

    <com.example.framework.view.ToolBar
        android:id="@+id/toolbar"
        app:app_text="@string/mian_more"
        app:app_back_color_toob="@color/light_black"
        app:app_text_color="@color/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.example.framework.view.ItemBar
        android:id="@+id/item_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_item_height"
        app:app_item_back_color="@color/light_gray"
        app:app_item_left_isshow="true"
        app:app_item_left_src="@drawable/icon_more_regist"
        app:app_item_text="@string/more_register"
        app:app_item_text_color="@color/light_blue"
        app:app_item_text_size="@dimen/dm_px_30" />
    <View
        android:layout_below="@id/center_item_title"
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="@dimen/wel_view_height_dp_1dp"/>
    <com.example.framework.view.ItemBar
        android:id="@+id/item_pwd"
        app:app_item_text="@string/more_secret"
        app:app_item_text_color="@color/light_blue"
        style="@style/showLeftRightShow"
        app:app_item_back_color="@color/light_gray"
        app:app_item_left_src="@drawable/icon_more_secret"
        app:app_item_right_src="@drawable/toggle_off"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_item_height"/>
    <View
        android:layout_below="@id/center_item_title"
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="@dimen/wel_view_height_dp_1dp"/>
    <com.example.framework.view.ItemBar
        android:id="@+id/item_reset_pwd"
        app:app_item_text="@string/more_reset"
        app:app_item_text_color="@color/light_blue"
        app:app_item_left_isshow="true"
        app:app_item_left_src="@drawable/icon_more_contact"
        app:app_item_text_size="@dimen/dm_px_30"
        app:app_item_right_text_color="@color/deep_red"
        app:app_item_back_color="@color/light_gray"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_item_height"/>
    <View
        android:layout_below="@id/center_item_title"
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="@dimen/wel_view_height_dp_1dp"/>

    <com.example.framework.view.ItemBar
        android:id="@+id/item_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_item_height"
        app:app_item_back_color="@color/light_gray"
        app:app_item_left_isshow="true"
        app:app_item_left_src="@drawable/icon_more_reset"
        app:app_item_right_text="@string/more_contact_photo"
        app:app_item_right_text_isshow="true"
        app:app_item_right_text_size="@dimen/dm_px_20"
        app:app_item_text="@string/more_contact"
        app:app_item_text_color="@color/light_blue"
        app:app_item_text_size="@dimen/dm_px_30" />
    <View
        android:layout_below="@id/center_item_title"
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="@dimen/wel_view_height_dp_1dp"/>
    <com.example.framework.view.ItemBar
        android:id="@+id/item_abs"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_item_height"
        app:app_item_back_color="@color/light_gray"
        app:app_item_left_isshow="true"
        app:app_item_left_src="@drawable/icon_more_about"
        app:app_item_text="@string/more_about"
        app:app_item_text_color="@color/light_blue"
        app:app_item_text_size="@dimen/dm_px_30" />

    <View
        android:layout_below="@id/center_item_title"
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="@dimen/wel_view_height_dp_1dp"/>
    <com.example.framework.view.ItemBar
        android:id="@+id/item_sms"
        app:app_item_text="@string/more_sms"
        app:app_item_text_color="@color/light_blue"
        app:app_item_left_isshow="true"
        app:app_item_left_src="@drawable/icon_more_sms"
        app:app_item_text_size="@dimen/dm_px_30"
        app:app_item_back_color="@color/light_gray"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_item_height"/>
    <View
        android:layout_below="@id/center_item_title"
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="@dimen/wel_view_height_dp_1dp"/>
    <com.example.framework.view.ItemBar
        android:id="@+id/item_share"
        app:app_item_text="@string/more_share"
        app:app_item_text_color="@color/light_blue"
        app:app_item_left_isshow="true"
        app:app_item_left_src="@drawable/icon_more_share"
        app:app_item_text_size="@dimen/dm_px_30"
        app:app_item_back_color="@color/light_gray"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_item_height"></com.example.framework.view.ItemBar>

    为啥？


</LinearLayout>